Fixed misaligned cutout rects.

--- a/css/main.css
+++ b/css/main.css
@@ -107,9 +107,7 @@ img {
   /*background-color: #9f584e;*/
   color: white;
 
-/*  -webkit-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);
-  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.3);*/
+  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.35);
 
   pointer-events:none;
 
@@ -118,10 +116,7 @@ img {
 .annotations button.active {
 
   color: #AAA;
-
-  -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.4);
-  -moz-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.4);
-  box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.5);
 
 }
 
